--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-
         <h1>Seattle Traffic Cameras</h1>
-
+        <img id="ajax-loader" src="img/ajax-spinner.gif" alt="loading data animation"/>
         <p>
             <input type="search" id="search" placeholder="Search for specific street names...">
         </p>
